# real-time-web-app

./: .env  .gitignore  README.md  docker-compose.yaml  mongo-initialize.js
api/: pyproject.toml
api/docker/: Dockerfile  docker-entrypoint.sh  gunicorn_conf.py
api/src/: main.py
api/src/database/: database.py
api/src/modules/: parameters.py  websockets.py
api/src/services/: weather_service.py
aws/modules/cognito_pool/: main.tf  output.tf  vars.tf
aws/modules/cognito_pool_client/: main.tf  output.tf  vars.tf
aws/modules/ses_domain/: main.tf  output.tf  vars.tf
aws/modules/ses_email_configuration_set/: main.tf  output.tf  vars.tf
aws/modules/ses_email_identity/: main.tf  output.tf  vars.tf
aws/terraform/: .envrc  global.hcl  terragrunt.hcl
aws/terraform/{account_alias}/: account.hcl
aws/terraform/{account_alias}/eu-west-1/dev/: env.hcl
aws/terraform/{account_alias}/eu-west-1/dev/real_time_web_app/: project.hcl
aws/terraform/{account_alias}/eu-west-1/dev/real_time_web_app/cognito_pool/: terragrunt.hcl
frontend/: package-lock.json  package.json
frontend/docker/: Dockerfile
frontend/src/: styles.scss
frontend/src/app/: app-routing.module.ts  app.module.ts
frontend/src/app/components/charts/line-chart/: line-chart.component.html  line-chart.component.spec.ts  line-chart.component.ts
frontend/src/app/pages/dashboard/: dashboard.component.html
frontend/src/app/services/: socket.service.ts
frontend/src/environments/: environment.prod.ts  environment.ts
(+5 files in other folders)
